[gd_scene load_steps=9 format=3 uid="uid://s2gii5awo15c"]

[ext_resource type="Script" path="res://scenes/user_interface/user_interface.gd" id="1_8cjgs"]
[ext_resource type="Script" path="res://scenes/user_interface/deep_seas_link_button.gd" id="2_06g54"]
[ext_resource type="Script" path="res://scenes/user_interface/fishbone_shards_label.gd" id="2_nfbn2"]
[ext_resource type="Script" path="res://scenes/user_interface/tidal_instinct_label.gd" id="3_1y12r"]
[ext_resource type="Script" path="res://scenes/user_interface/nautilus_gem_label.gd" id="5_gqukr"]
[ext_resource type="PackedScene" uid="uid://da7i5th3uvdia" path="res://scenes/views/tidal_instinct/tidal_instinct_view.tscn" id="6_eu17m"]
[ext_resource type="PackedScene" uid="uid://d0rg3ko6mln80" path="res://scenes/views/deep_seas/deep_seas_view.tscn" id="7_b4yur"]
[ext_resource type="PackedScene" uid="uid://csh4m33duhk1x" path="res://scenes/views/ocean/ocean_view.tscn" id="8_pxq1b"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cjgs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Navigator" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer"]
layout_mode = 2

[node name="OceanLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ocean"

[node name="TidalInstinctLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tidal Instinct"

[node name="DeepSeasLink" type="LinkButton" parent="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Deep Seas"
script = ExtResource("2_06g54")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Resources" type="Control" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/MarginContainer"]
layout_mode = 2

[node name="TidalInstinctLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_1y12r")

[node name="FishboneShardsLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fishbone Shards : 0"
script = ExtResource("2_nfbn2")

[node name="NautilusGemLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/Resources/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("5_gqukr")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MainView" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TidalInstinctView" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("6_eu17m")]
visible = false
layout_mode = 1
user_interface = NodePath("../../..")
view = 1

[node name="OceanView" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("8_pxq1b")]
visible = false
layout_mode = 1
user_interface = NodePath("../../..")

[node name="DeepSeasView" parent="HBoxContainer/MainView" node_paths=PackedStringArray("user_interface") instance=ExtResource("7_b4yur")]
layout_mode = 1
user_interface = NodePath("../../..")

[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer/OceanLink" to="." method="_on_ocean_link_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer/TidalInstinctLink" to="." method="_on_tidal_instinct_link_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/Navigator/MarginContainer/VBoxContainer/DeepSeasLink" to="." method="_on_deep_seas_link_pressed"]
